added basic content; corrected cream color values

--- a/app/index.html
+++ b/app/index.html
@@ -19,9 +19,21 @@
 
 	<body>
 		<div class="main-container">
-			<h1>'Allo, 'Allo!</h1>
-			<p>You now have</p>
-		</div>
+			<img src="images/grandworld-logo.png" class="top-logo">
+			<p class="herotext">Grandma and Grandpa's <br>World of Comfort</p>
+
+			<div class="column-left">
+				<h1>Assisted Living</h1>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut gravida volutpat lorem sed dictum. Aliquam iaculis suscipit bibendum. Vivamus varius suscipit purus, sed varius odio viverra vel. Vivamus vestibulum tempor lacus sit amet imperdiet. Etiam sit amet nibh non risus dapibus pellentesque. Suspendisse mattis ipsum ac est convallis tristique.</p>
+			</div>
+
+			<div class="column-right">
+				<h1>Primary Care</h1>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut gravida volutpat lorem sed dictum. Aliquam iaculis suscipit bibendum. Vivamus varius suscipit purus, sed varius odio viverra vel. Vivamus vestibulum tempor lacus sit amet imperdiet. Etiam sit amet nibh non risus dapibus pellentesque. Suspendisse mattis ipsum ac est convallis tristique.</p>
+			</div>
+
+			<p class="coming-soon">Coming to Coimbatore soon!</p>
+		</div> <!-- closes main container div -->
 
 		<!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
 		<script>
