--- a/app/index.html
+++ b/app/index.html
@@ -13,6 +13,8 @@
 		<!-- endbuild -->
 
 		<!-- build:css styles/main.css -->
+		<script type="text/javascript" src="//use.typekit.net/fvi2xwo.js"></script>
+		<script type="text/javascript">try{Typekit.load();}catch(e){}</script>
 		<link rel="stylesheet" href="styles/main.css">
 		<!-- endbuild -->
 	</head>
@@ -21,6 +23,7 @@
 		<div class="main-container">
 			<img src="images/grandworld-logo.png" class="top-logo">
 			<p class="herotext">Grandma and Grandpa's <br>World of Comfort</p>
+			<p class="coming-soon">Coming to Coimbatore soon!</p>
 
 			<div class="column-left">
 				<h1>Assisted Living</h1>
@@ -32,7 +35,6 @@
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut gravida volutpat lorem sed dictum. Aliquam iaculis suscipit bibendum. Vivamus varius suscipit purus, sed varius odio viverra vel. Vivamus vestibulum tempor lacus sit amet imperdiet. Etiam sit amet nibh non risus dapibus pellentesque. Suspendisse mattis ipsum ac est convallis tristique.</p>
 			</div>
 
-			<p class="coming-soon">Coming to Coimbatore soon!</p>
 		</div> <!-- closes main container div -->
 
 		<!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
